Trying to move image and button to YOUR VIKING div

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class = "bullpen" id ="bullpen4">&nbsp;</div>
     </div>
    
-    <div class = "yourCharacter"><p><h3>Your Character</h3></p></div>
+    <div class = "yourCharacter"><p><h3>Your Viking</h3></p></div>
 
     <div class= "yourCharacter">
         <div class = "yourCharacter" id ="chosenViking">&nbsp;</div>
