Use .remove rather than .html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- We created an empty HTML div. Note that there is no content inside. -->
     <h2>Viking Massacre Characters</h2>
-    <div id="corral">
+    <div id="corral" class = "character">
       <div class = "bullpen" id ="bullpen1">&nbsp;</div>
       <div class = "bullpen" id ="bullpen2">&nbsp;</div>
       <div class = "bullpen" id ="bullpen3">&nbsp;</div>
